Gap Fix 2?

--- a/generalSectionFooter.css
+++ b/generalSectionFooter.css
@@ -50,9 +50,8 @@
 
 /* PAID FOR BY */
 	.sectionPaidForBy {
-    	margin-top: -1px;
 		background-color: #013715;
-		color: white;}
+		color: white;} 
 
 	.sectionPaidForByContent {
     	margin: 0 10%;
